Pascal/test/cohadar/pascal/errors/undefined_type.pas
program test;

var x: Mutalisc;

begin
end.